Update images in gardens page and home page, fix spacing issue in about section on home page

--- a/src/components/homePage/About.css
+++ b/src/components/homePage/About.css
@@ -51,12 +51,7 @@
     grid-column-end: 4;
 }
 
-.about__content p {
-    margin-bottom: 0.5rem;
-    line-height: 1.7;
-}
-
-.about__content-text p {
+.about__content-text p:nth-child(1) {
     padding-bottom: 1rem;
 }
 
